# 2D-Doc-parsing-library

./: .gitignore  README.md  pyproject.toml  try.sh
tests/: test_codecs.py  test_conformance.py  test_dates.py  test_detect.py  test_pipeline.py  test_reader.py  test_reference_v4.py  test_trust.py
tests/fixtures/: tsl_sample.xml
tools/: build_catalog.py  build_common_fields.py  build_grep_targets.py  build_grep_targets_curated.py
twoddoc/: __init__.py  cli.py  conformance.py  dates.py  detect.py  errors.py  header.py  message.py  model.py  reader.py
twoddoc/catalog/: __init__.py  loader.py
twoddoc/catalog/data/: common_fields_by_document_type.json  data_ids.json  document_types.json  grep_targets.json  grep_targets_curated.json  perimeters.json  requirements.json
twoddoc/codecs/: __init__.py  ascii_dm.py  base256.py  base32.py  c40.py
twoddoc/trust/: __init__.py  fetch.py  tsl.py  verify.py
